@startuml

title __BOOKSTORE's Class Diagram__\n

  namespace springmongoapp.bookStore {
    class springmongoapp.bookStore.Startup {
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.BookController {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.CatalogController {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.HomeController {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace model {
      class springmongoapp.bookStore.model.Book {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace repository {
      interface springmongoapp.bookStore.repository.BookRepository {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace security {
      class springmongoapp.bookStore.security.SecurityConfiguration {
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace service {
      class springmongoapp.bookStore.service.BookService {
      }
    }
  }
  

  springmongoapp.bookStore.controller.BookController o-- springmongoapp.bookStore.service.BookService : service
  springmongoapp.bookStore.controller.CatalogController o-- springmongoapp.bookStore.service.BookService : service
  springmongoapp.bookStore.service.BookService o-- springmongoapp.bookStore.repository.BookRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
